--- a/.github/workflows/Style_Checker_and_Prettify_Code.yml
+++ b/.github/workflows/Style_Checker_and_Prettify_Code.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install npm v8
+      run: npm i -g npm@8
+      
     - name: Checkout
       uses: actions/checkout@v2
       with:
