--- a/.github/workflows/Style_Checker_and_Prettify_Code.yml
+++ b/.github/workflows/Style_Checker_and_Prettify_Code.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{ github.head_ref }}
+        
+    - name: Debug
+      run: echo "GitHub Token: ${{ github.token }}"
 
     - name: Prettify code
       uses: creyD/prettier_action@v4.0
