--- a/.github/workflows/Style_Checker_and_Prettify_Code.yml
+++ b/.github/workflows/Style_Checker_and_Prettify_Code.yml
@@ -23,4 +23,4 @@ jobs:
       uses: creyD/prettier_action@v4.0
       with:
         prettier_options: --write **/*.{js,md}
-        token: ${{ github.token }}
+        github_token: ${{ github.token }}
