--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Run the tests
       run: |
           cd src
-          pytest --cov=./unittest.py
+          pytest --cov=./unittest.py ./unittest.py
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
