changes to codecov

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -24,8 +24,7 @@ jobs:
         echo requirements installed
     - name: Run the tests
       run: |
-          cd src
-          pytest --cov=./unittest.py
+          pytest --cov=src src/unitest.py 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
