--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         # Do not use python versions below 3.9 since type annotations are only supported in Python >= 3.9
         python-version: ["3.9", "3.10"]
-        script: ["src/main.py -t all"]
+        script: ["src/unitest.py -t all"]
 
     steps:
       - uses: actions/checkout@v3
@@ -27,6 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install pytest
 
       - name: Run tests
         env:
