--- a/.github/workflows/Style_Checker_and_Prettify_Code.yml
+++ b/.github/workflows/Style_Checker_and_Prettify_Code.yml
@@ -19,5 +19,5 @@ jobs:
     - name: Prettify code
       uses: creyD/prettier_action@v4.0
       with:
-        env: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         prettier_options: --write **/*.md
